libtlafmt/src/renderer/snapshots/libtlafmt__renderer__comment__tests__comment_only_lines__comment_only_lines_1.snap
---
source: libtlafmt/src/renderer/comment.rs
expression: output
---
-------------------------------- MODULE bananas --------------------------------
A ==
    /\ X = 42
    \* Bananas
    \* Platanos
    \* Apples
    /\ Y = 25
================================================================================
