libtlafmt/src/renderer/snapshots/libtlafmt__renderer__comment__tests__comment_only_lines__comment_only_lines_2.snap
---
source: libtlafmt/src/renderer/comment.rs
expression: output
---
-------------------------------- MODULE bananas --------------------------------
TypeOK ==
    \* Bananas
    /\ X = 42
    \* Platanos
    \* Apples
    /\ Y = 24
================================================================================
