libtlafmt/src/renderer/snapshots/libtlafmt__renderer__comment__tests__comment_only_lines__comment_only_lines_3.snap
---
source: libtlafmt/src/renderer/comment.rs
expression: output
---
-------------------------------- MODULE bananas --------------------------------
TypeOK ==
    \* Bananas
    \* Bananas
    /\ X = 42
    \* Platanos
    \* Apples
    /\ Y = 24
================================================================================
