libtlafmt/src/renderer/snapshots/libtlafmt__renderer__comment__tests__comment_only_lines__comment_only_lines_5.snap
---
source: libtlafmt/src/renderer/comment.rs
expression: output
---
-------------------------------- MODULE bananas --------------------------------
Op ==
    /\ bananas = 42         \* This is an important number.
    /\ platanos' = 42       \* Something here.
                            \* Continues here.
    /\ platanos' = 42       \* More here.
================================================================================
