libtlafmt/src/renderer/snapshots/libtlafmt__renderer__comment__tests__comment_only_lines__comment_only_lines_7.snap
---
source: libtlafmt/src/renderer/comment.rs
expression: output
---
-------------------------------- MODULE bananas --------------------------------
AlwaysResponds ==
    (*************************************************************************)
  (* Some simple liveness properties, implied by the fact that every       *)
  (* request eventually generates a response.                              *)
  (*************************************************************************)
    /\ \A p \in Proc, r \in Reg:
        X = 42
    /\ \A oi \in [proc: Proc, idx: Nat ]:
        Y = 24
================================================================================
