libtlafmt/src/renderer/snapshots/libtlafmt__renderer__comment__tests__comment_only_lines__comment_only_lines_8.snap
---
source: libtlafmt/src/renderer/comment.rs
expression: output
---
-------------------------------- MODULE bananas --------------------------------
SetToSeqs == UNION {{x \in [1 -> set]:
                            \* A filter applied on each permutation
                            \* generated by [S -> T]
        Op(x)}}
================================================================================
