libtlafmt/src/renderer/snapshots/libtlafmt__renderer__comment__tests__comment_only_lines__comment_only_lines_9.snap
---
source: libtlafmt/src/renderer/comment.rs
expression: output
---
-------------------------------- MODULE bananas --------------------------------
TypeOK ==
    /\ X = 42
    \* Platanos
    \* Platanos
    /\ Y = 24
================================================================================
